[package]
name = 'cord-node'
version = "0.9.0"
authors = ['Dhiway Networks <info@dhiway.com>']
build = 'build.rs'
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = 'cord'
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# array-bytes = "6.1"
clap = { version = "4.0.9", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.4.0" }
serde = { version = "1.0.136", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.21"
log = "0.4.17"
hex = { version = "0.4.3", default-features = false }
# libp2p-identity = { version = "0.1.2", features = ["peerid", "ed25519"] }
bs58 = "0.4.0"

# bs58 = { version = "0.4.0", default-features = false }
# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-core = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-runtime = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.43" }
sp-timestamp = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-inherents = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-keyring = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-transaction-storage-proof = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-io = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-session = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-offchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-trie = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-keystore = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }

# Substrate Client dependencies
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-chain-spec = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-grandpa = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-transaction-pool = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-network = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-network-common = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-network-sync = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-slots = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-storage-monitor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-basic-authorship = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-service = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43", default-features = false }
sc-telemetry = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-executor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-authority-discovery = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-sync-state-rpc = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-sysinfo = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-offchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-keystore = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }

# frame dependencies
frame-system = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
pallet-im-online = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }

# cord-specific dependencies
cord-runtime = { package = "cord-runtime", path = "../../runtime" }
cord-primitives = { package = "cord-primitives", path = "../../primitives/cord" }
network-membership = { package = "network-membership", path = "../../primitives/network-membership" }
cord-client = { package = "cord-client", path = "../client" }
cord-inspect = { package = "cord-inspect", path = "../../inspect" }
cord-rpc = { package = "cord-rpc", path = "../../rpc" }
cord-runtime-constants = { package = "cord-runtime-constants", path = "../../runtime/constants" }
pallet-network-membership = { package = "pallet-network-membership", path = "../../pallets/network-membership" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
try-runtime-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
serde_json = "1.0.85"

[dev-dependencies]
sc-keystore = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-client-db = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-consensus-epochs = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-service-test = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-tracing = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
tempfile = "3.1.0"
serde_json = "1.0"
regex = "1.5.5"
soketto = "0.7.1"
tokio = { version = "1.17.0", features = ["macros", "time", "parking_lot"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
wait-timeout = "0.2"
substrate-rpc-client = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
pallet-timestamp = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
substrate-test-utils = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
cord-cli-test-utils = { package = "cord-cli-test-utils", path = "../../test-utils" }

[build-dependencies]
clap = { version = "4.0.9", optional = true }
clap_complete = { version = "4.0.2", optional = true }
cord-inspect = { package = "cord-inspect", optional = true, path = "../../inspect" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
substrate-build-script-utils = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
substrate-frame-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
try-runtime-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
sc-cli = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.43" }
pallet-balances = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-storage-monitor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }

[features]
default = ["cli"]
cli = [
	"cord-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
fast-runtime = ["cord-runtime/fast-runtime"]
runtime-benchmarks = [
	"cord-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged.
try-runtime = ["cord-runtime/try-runtime", "try-runtime-cli/try-runtime"]
