[package]
name = "cord-node-testing"
description = "Test utilities for CORD node."
version = "0.9.2-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
fs_extra = "1"
futures = "0.3.30"
log = "0.4.17"
tempfile = "3.1.0"
frame-system = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
node-cli = { package = "cord-node-cli", path = "../cli" }
node-primitives = { package = "cord-primitives", path = "../../primitives/cord" }
cord-runtime = { package = "cord-runtime", path = "../../runtime" }
sc-block-builder = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-client-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-client-db = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", features = [
	"rocksdb",
] }
sc-consensus = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-executor = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-service = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", features = [
	"rocksdb",
	"test-helpers",
] }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-blockchain = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-consensus = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-inherents = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-keyring = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-timestamp = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false }
cord-test-client = { path = "../../test-utils/client" }
pallet-network-membership = { package = "pallet-network-membership", path = "../../pallets/network-membership" }
cord-runtime-constants = { package = "cord-runtime-constants", path = "../../runtime/constants" }
