[package]
name = "cord-node-testing"
description = "Test utilities for CORD node."
version = "0.9.3-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
frame-system = { workspace = true }
cord-node-cli = { workspace = true }
cord-primitives = { workspace = true }
cord-loom-runtime = { workspace = true }
sc-block-builder = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { features = ["rocksdb"], workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-service = { features = ["rocksdb", "test-helpers"], workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
cord-test-client = { workspace = true }
pallet-network-membership = { workspace = true }
pallet-transaction-payment = { workspace = true }
cord-loom-runtime-constants = { workspace = true }
