[package]
name = "accountset"
version = "0.4.0"
authors = ["Gautam Dhameja <quasijatt@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.118' }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde/std',
]
