[package]
name = "pallet-anchor"
version = '0.7.6'
edition = '2021'
authors = ['Dhiway Networks <info@dhiway.com>']
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"
description = "AnchorTreasury Module"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }


[features]
default = ["std"]
runtime-benchmarks = [
 
]
std = [
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
]
