[package]
name = "pallet-asset"
description = "Manage Asset"
version = "0.9.2-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", features = [
	"std",
] }
sp-keystore = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", features = [
	"std",
] }
cord-utilities = { package = "cord-utilities", path = "../../utilities", features = [
	"mock",
] }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
cord-primitives = { package = "cord-primitives", path = "../../primitives/cord", default-features = false }
cord-utilities = { package = "cord-utilities", path = "../../utilities", default-features = false }
identifier = { package = "cord-identifier", path = "../../primitives/identifier", default-features = false }
pallet-chain-space = { default-features = false, path = '../chain-space' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false, optional = true }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false }
frame-support = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false, optional = true }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false, optional = true }
sp-keystore = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0", default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"cord-utilities/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"identifier/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"cord-primitives/std",
	"cord-utilities/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-chain-space/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"cord-utilities/try-runtime",
]
