[package]
authors = [ 'KILT <info@kilt.io>' ]
edition = '2018'
name = 'attestation'
version = '0.23.0'
description = 'Enables adding and revoking attestations.'

[[package.metadata.docs.rs]]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder = { package = 'substrate-wasm-builder', version = '3.0.0' }

[dependencies]
bitflags = { default-features = false, version = '1.2.1' }
codec = {default-features = false,features = ['derive'], package = 'parity-scale-codec', version = '1.3.5' }

# Substrate dependencies
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

# pallets
ctype = { version = '0.23.0', default-features = false, path = '../ctype' }
delegation = { version = '0.23.0', default-features = false, path = '../delegation' }
error = { version = '0.23.0', default-features = false, path = '../error' }

[dev-dependencies]
cord-node-runtime = { version = '0.2.0', default-features = false, path = '../../runtime' }
sp-core = { default-features = false, version = '2.0.0' }

[features]
default = [ 'std' ]
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'ctype/std',
	'delegation/std',
	'error/std'
]
