[package]
name = 'attestation'
version = '0.3.0'
edition = '2018'
authors = ['Dhiway <info@dhiway.com>']
description = 'Enables adding and revoking marks.'

[[package.metadata.docs.rs]]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder = { package = 'substrate-wasm-builder', version = '3.0.0' }

[dependencies]
bitflags = { default-features = false, version = '1.2.1' }
codec = {default-features = false,features = ['derive'], package = 'parity-scale-codec', version = '1.3.5' }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# pallets
mtype = { default-features = false, path = '../mtype' }
delegation = { default-features = false, path = '../delegation' }
error = { default-features = false, path = '../error' }

[dev-dependencies]
cord-runtime = { default-features = false, path = '../../runtime' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = [ 'std' ]
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'mtype/std',
	'delegation/std',
	'error/std'
]
