[package]
name = "pallet-author-registry"
description = 'Manage network authorship.'
version = '0.7.10'
authors = ["Dhiway <info@dhiway.com>"]
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.30" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false, optional = true }
cord-primitives = { package = "cord-primitives", path="../../primitives", default-features = false }


sp-std = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}
sp-runtime = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}
sp-core = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}
frame-support = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}
frame-system = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}
sp-io = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.30"}

[features]
default = ['std']
std = [
    'codec/std',
    "scale-info/std",
    "cord-primitives/std",
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
]


