[package]
name = "pallet-authority"
version = '0.5.5'
edition = '2018'
authors = ['Dhiway <info@dhiway.com>']
description = "Dhiway Authorities Module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
cord-primitives = { package = "cord-primitives", path="../../primitives", default-features = false }
serde = { version = "1.0.130", features = ["derive"], optional = true }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "cord-primitives/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-session/std"
]